# math

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  entry_point.cpp
src/generator/: CMakeLists.txt  generator.cpp  generator.hpp
templates/: float1.tpl
templates/base/: licence.txt  vector.h
testing/: CMakeLists.txt
